fix spacing

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1395,6 +1395,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 60px;
 }
 @media (min-width: 768px) {
   .container {
@@ -6210,6 +6211,3 @@ button.close {
   text-shadow: 2px 2px 0 #513a33;
 }
 
-.spacing{
-  margin-bottom: 30px;
-}
